fixes jump position and adds infinite scroll

--- a/desktop/apps/auction2/components/auction_artworks/index.styl
+++ b/desktop/apps/auction2/components/auction_artworks/index.styl
@@ -1,3 +1,7 @@
 .auction2-artworks
   clearfix()
   padding-top 30px
+
+  .loading-spinner
+    clear both
+    position relative
